# ota-demo

./: .gitignore  NUL  composer.json  package-lock.json
nativephp/android/app/: build.gradle.kts
nativephp/android/app/src/androidTest/java/com/example/androidphp/: ExampleInstrumentedTest.kt
nativephp/android/app/src/main/: AndroidManifest.xml
nativephp/android/app/src/main/cpp/: CMakeLists.txt  libphp_wrapper.cpp  php_bridge.c
nativephp/android/app/src/main/cpp/compat/: android_compat.cpp
nativephp/android/app/src/main/cpp/native/: native_bridge.c  native_bridge.h
nativephp/android/app/src/main/java/com/shane/ota/bridge/: LaravelEnvironment.kt  PHPBridge.kt
nativephp/android/app/src/main/java/com/shane/ota/network/: PHPRequest.kt  PHPWebViewClient.kt  WebViewManager.kt
nativephp/android/app/src/main/java/com/shane/ota/security/: LaravelCookieStore.kt  LaravelSecurity.kt
nativephp/android/app/src/main/java/com/shane/ota/services/: PushNotificationService.kt
nativephp/android/app/src/main/java/com/shane/ota/ui/: MainActivity.kt
nativephp/android/app/src/main/java/com/shane/ota/utils/: NativeActionCoordinator.kt  NativeActions.kt
nativephp/android/app/src/main/res/layout/: activity_main.xml
nativephp/android/app/src/main/res/values/: themes.xml
nativephp/android/app/src/test/java/com/example/androidphp/: ExampleUnitTest.kt
nativephp/android/gradle/: libs.versions.toml
nativephp/android/gradle/wrapper/: gradle-wrapper.properties
nativephp/ios/Include/Bridge/: PHP.c  PHP.h
nativephp/ios/Include/libpng16/: pnglibconf.h
nativephp/ios/Include/libxml2/: xmlversion.h
nativephp/ios/Include/openssl/: configuration.h
nativephp/ios/Include/php/main/: build-defs.h  php_config.h
nativephp/ios/NativePHP/: AppDelegate.swift  ContentView.swift  Info.plist  NativePHPApp.swift  PHPSchemeHandler.swift
nativephp/ios/NativePHP.xcodeproj/: project.pbxproj
nativephp/ios/NativePHP/Bridge/: NativePHP.swift
nativephp/ios/NativePHP/Components/: Toast.swift
nativephp/ios/NativePHP/Extensions/: FirebaseManager.swift  UIWindow+Shake.swift
resources/views/: welcome.blade.php
